Fixed scrolling issue on mobile.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
 	margin-left: 0px;
-	width: 100%;
+	width: auto;
 	color: white;
 	font-family: 'Helvetica';
 	font-size: 20pt;
@@ -18,7 +18,7 @@ h1 {
 
 h2 {
 	margin-left: 0px;
-	width: 100%;
+	width: auto;
 	color: white;
 	font-family: 'Helvetica';
 	font-size: 14pt;
@@ -26,7 +26,7 @@ h2 {
 
 h3 {
 	margin-left: 10px;
-	width: 100%;
+	width: auto;
 	color: white;
 	font-family: 'Helvetica';
 	font-size: 12pt;
@@ -34,7 +34,7 @@ h3 {
 
 p {
 	margin-left: 10px;
-	width: 100%;
+	width: auto;
 	color: white;
 	font-family: 'Helvetica';
 	font-size: 12pt;
@@ -42,7 +42,7 @@ p {
 
 li {
 	position: relative;
-	width: 100%;
+	width: auto;
 	color: white;
 	font-family: 'Helvetica';
 	font-size: 12pt;
@@ -58,7 +58,7 @@ li::before {
 }
 
 a {
-	width: 100%;
+	width: auto;
 	color: lightskyblue;
 	font-family: 'Helvetica';
 	font-size: 12pt;
@@ -77,6 +77,7 @@ footer {
 /*Classes*/
 
 .content {
+	display: block;
 	position: relative;
 	padding: 25px;
 	width: 60%;
